errors.txt
paulskie@Paulskies-iMac-Pro godot-ios-extensions % ./build.sh ios debug
Building libraries...
Building iOS libraries (debug)...
AVPIdentity: AppleVirtualPlatformHostKey.mm:234: Assert: platformExpert,  value: 0
AVPIdentity: AppleVirtualPlatformHostKey.mm:234: Failed to get AppleVirtualPlatformARMPE service.
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:68:18: error: overriding non-open property outside of its defining module
    override var description: String {
                 ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:68:18: error: non-@objc property 'description' is declared in extension of 'Object' and cannot be overridden
    override var description: String {
                 ^
/Users/paulskie/Documents/godot-ios-extensions/SwiftGodot/Sources/SwiftGodot/Core/Various.swift:17:16: note: overridden declaration is here
    public var description: String {
               ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:12:7: error: cannot declare conformance to 'NSObjectProtocol' in Swift; 'Passkey' should inherit 'NSObject' instead
class Passkey: RefCounted, NSObjectProtocol {
      ^
ObjectiveC.NSObjectProtocol:44:9: note: multiple matching properties named 'description' with type 'String'
    var description: String { get }
        ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:68:18: note: candidate exactly matches
    override var description: String {
                 ^
/Users/paulskie/Documents/godot-ios-extensions/SwiftGodot/Sources/SwiftGodot/Core/Various.swift:17:16: note: candidate exactly matches
    public var description: String {
               ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:12:7: note: add stubs for conformance
class Passkey: RefCounted, NSObjectProtocol {

    eror